fixed artist grid issue on mobile screen #1fzhh6m

--- a/src/Global.scss
+++ b/src/Global.scss
@@ -40,7 +40,7 @@ button {
 
   @media screen and (max-width: 600px) {
     width: 100%;
-    padding-right: 30px;
+    padding: 30px;
   }
   &.small {
     width: 1480px;
@@ -253,6 +253,10 @@ textarea {
   margin-top: 40px;
   margin-bottom: 30px;
   font-size: 30px;
+  @media screen and (max-width: 600px) {
+    margin-top: 10px;
+    font-size: 25px;
+  }
 }
 
 .d-h-between {
